--- a/app/src/main/res/layout/sound_card.xml
+++ b/app/src/main/res/layout/sound_card.xml
@@ -22,16 +22,16 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:background="@null"
-            android:contentDescription="@string/fav_desc"
+            android:contentDescription="@string/not_fav_desc"
             android:src="@drawable/ic_favorite_outline_white_24dp"/>
 
         <TextView
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_toEndOf="@id/fav_button"
             android:layout_toRightOf="@+id/fav_button"
-            android:layout_centerVertical="true"
             android:gravity="center"
             android:textColor="@android:color/white"
             tools:text="Title for Sound"/>
